React to surprises in post-JEP 411 Java versions
Adapt beginEnforcing() to throw exceptions with decent explanations
on Java > 17 if UnsupportedOperationException has been caught
(suggest adding -Djava.security.manager=allow, for whatever good
it might do), or if getSecurityManager() returns the wrong thing
(suggest trying -Dorg.postgresql.pljava.policy.enforcement=none
to ignore the fact, though again this may do little good or lead
simply to a different later failure).

Add doc comments to various InstallHelper methods lacking them.